--- a/vercel.json
+++ b/vercel.json
@@ -49,7 +49,7 @@
   "redirects": [
     {
       "source": "/(.*)",
-      "destination": "https://www.vidbinge.com/",  // Replace with the site you want to redirect to
+      "destination": "https://www.vidbinge.com/",
       "permanent": false
     }
   ]
